# SignalSentry

./: .gitignore  README.md  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  admin.py  incidents.py  logs.py  metrics.py  postmortems.py  services.py  stream.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  incidents.py  logs.py  metrics.py
backend/app/db/: session.py
backend/app/models/: __init__.py  incident.py  log.py  metric.py
backend/app/schemas/: __init__.py  incidents.py  logs.py  metrics.py  postmortem.py  root_cause.py  services.py
backend/app/seed/: __init__.py  seed.py
backend/app/services/: anomaly.py  event_bus.py  incident_detector.py  log_parser.py  postmortem.py  root_cause.py  service_summary.py  simulator.py
backend/data/: demo_logs.json  demo_metrics.json
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_anomaly.py  test_log_parser.py  test_root_cause.py
data/: README.md  generate_sample_data.py  incidents_summary.md  sample_logs.jsonl  sample_metrics.jsonl
docs/: README.md  demo.md
frontend/: .env.local  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/incidents/: page.tsx
frontend/app/services/: page.tsx
frontend/components/incidents/: hypotheses-card.tsx  (+2 more)
frontend/lib/: api.ts  data.ts
frontend/types/: api.ts
infra/: README.md
(+9 files in other folders)
